--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ python:
 
 install:
   - pip install -r requirements.txt
+env:
+  -
 
 script:
   - nosetests -v --with-coverage --cover-tests --cover-package=pyaxonaut pyaxonaut/tests
+
+after_success:
+  - codecov
