--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ python:
 
 install:
   - pip install -r requirements.txt
-env:
-  -
+  - pip install codecov
 
 script:
   - nosetests -v --with-coverage --cover-tests --cover-package=pyaxonaut pyaxonaut/tests
